[package]
name = "imgopt"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]
name = "imgopt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgopt = {git = "https://github.com/thomas9911/imgopt", branch = "main", default-features = false}

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
